--- a/apex-mdapi/src/classes/TEST_PaginatedController.cls
+++ b/apex-mdapi/src/classes/TEST_PaginatedController.cls
@@ -1,5 +1,5 @@
 @IsTest
-private class PaginatedControllerTest {
+private class TEST_PaginatedController {
 
 	@IsTest
 	static void testBehavior() {
